# stella

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: stella-ci.yml
app/: config.py  database.py  main.py
app/api/: admin.py  health.py  webhooks.py
app/engine/: cards.py  classifier.py  recommender.py
app/fsm/: machine.py  states.py
app/fsm/handlers/: closing.py  confirmation.py  escalation.py  intent.py  objection.py  opening.py  price_fallback.py  qualifier.py  recommendation.py
app/integrations/kommo/: client.py
app/integrations/linkedin/: client.py
app/integrations/whatsapp/: base.py  client.py  cloud_api.py  evolution_api.py  evolution_parser.py  models.py  parser.py
app/integrations/whisper/: client.py
app/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
app/llm/prompts/: classifier.py  closer.py  concierge.py  qualifier.py
app/models/: __init__.py  conversation.py  lead.py  recommendation.py
app/services/: conversation_service.py  lead_service.py  message_formatter.py  metrics.py  output_guard.py
stella.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/test_engine/: test_cards.py  test_classifier.py  test_recommender.py
tests/test_fsm/: test_states.py
tests/test_integrations/: test_evolution_parser.py  test_whatsapp_parser.py  test_whatsapp_provider.py
tests/test_llm/: test_retry.py
tests/test_scenarios/: test_e2e_conversations.py
tests/test_services/: test_message_formatter.py  test_metrics.py  test_output_guard.py
(+2 files in other folders)
